fix alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@ body {
 .logo {
   flex: 0 0 auto;
   text-align: center;
+  align-self: center;
 }
 
 .nav-item {
